--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <!-- Standard Curriculum -->
         <section>
 
-            <div>
+            <div class="curriculum">
                 <h1 class="c1">Standard Curriculum</h1>
                 <div class="c">
                     <div class="c2">
