--- a/index.html
+++ b/index.html
@@ -73,43 +73,135 @@
                             Cum sociis natoque penatibus et magnis <br><br>
                             dis parturient montes, nascetur ridiculus <br>
                             <br>
+
                             mu sdis parturient
                         </p>
-<br><br>
+                        <br><br>
                         <h5 class="c5">Read More</h5>
                     </div>
                     <div class="c2">
-                        <div class="c3">
+                        <div class="c33">
                             <img class="img2" src="img/elementary.png" alt="">
                         </div>
                         <br>
-                        <h1>Kinder (3-6) Years</h1>
+                        <h1>Elementary School</h1>
                         <p class="c4">
                             Cum sociis natoque penatibus et magnis <br><br>
                             dis parturient montes, nascetur ridiculus <br>
                             <br>
                             mu sdis parturient
                         </p>
-<br><br>
-                        <h5 class="c5">Read More</h5>
+                        <br><br>
+                        <h5 class="c55">Read More</h5>
                     </div>
                     <div class="c2">
-                        <div class="c3">
+                        <div class="c333">
                             <img class="img2" src="img/middle.png" alt="">
                         </div>
                         <br>
-                        <h1>Kinder (3-6) Years</h1>
+                        <h1>Middle (10-16) Years</h1>
                         <p class="c4">
                             Cum sociis natoque penatibus et magnis <br><br>
                             dis parturient montes, nascetur ridiculus <br>
                             <br>
                             mu sdis parturient
                         </p>
-<br><br>
-                        <h5 class="c5">Read More</h5>
+                        <br><br>
+                        <h5 class="c555">Read More</h5>
                     </div>
                 </div>
             </div>
+        </section>
+
+        <!-- 2 btn -->
+
+        <section>
+            <div class="btn2">
+                <img src="img/L .png" alt=""><img src="img/R.png" alt="">
+            </div>
+        </section>
+        <!--  -->
+        <!-- Our Stories -->
+        <section>
+
+            <div class="stories">
+                <div class="stories1">
+                    <div>
+                        <h1> Our Stories</h1>
+                    </div>
+                    <div class="grid">
+                        <div class="box1">
+                            <img class="i" src="img/story-1.png" alt="">
+                            <p class="date">November 19, 2019</p>
+                            <div class="k">
+                                <h2>A fun toddler coloring training on <br>
+                                    classroom</h2>
+                                <br><br>
+                                <p>Beautiful branding for changes by Never Now in Australia. <br>
+                                    changes is a platform for open discussion in an inclusive and <br>
+                                    collaborative environment, providing the...</p>
+                            </div>
+                        </div>
+                        <div class="box2">
+                            <img class="i" src="img/story-1.png" alt="">
+                            <p class="date">November 19, 2019</p>
+                            <div class="k">
+                                <h2>A fun toddler coloring training on <br>
+                                    classroom</h2>
+                                <br><br>
+                                <p>Beautiful branding for changes by Never Now in Australia. <br>
+                                    changes is a platform for open discussion in an inclusive and <br>
+                                    collaborative environment, providing the...</p>
+                            </div>
+                        </div>
+                        <div class="box3">
+                            <img class="i" src="img/story-1.png" alt="">
+                            <p class="date">November 19, 2019</p>
+                            <div class="k">
+                                <h2>A fun toddler coloring training on <br>
+                                    classroom</h2>
+                                <br><br>
+                                <p>Beautiful branding for changes by Never Now in Australia. <br>
+                                    changes is a platform for open discussion in an inclusive and <br>
+                                    collaborative environment, providing the...</p>
+                            </div>
+                        </div>
+                        <div class="box4">
+                            <img class="i" src="img/story-1.png" alt="">
+                            <p class="date">November 19, 2019</p>
+                            <div class="k">
+                                <h2>A fun toddler coloring training on <br>
+                                    classroom</h2>
+                                <br><br>
+                                <p>Beautiful branding for changes by Never Now in Australia. <br>
+                                    changes is a platform for open discussion in an inclusive and <br>
+                                    collaborative environment, providing the...</p>
+                            </div>
+                        </div>
+                        <div class="box5">
+                            <img class="i" src="img/story-1.png" alt="">
+                            <p class="date">November 19, 2019</p>
+                            <div class="k">
+                                <h2>A fun toddler coloring training on <br>
+                                    classroom</h2>
+                                <br><br>
+                                <p>Beautiful branding for changes by Never Now in Australia. <br>
+                                    changes is a platform for open discussion in an inclusive and <br>
+                                    collaborative environment, providing the...</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="bnn">
+                    <button class="bn2">View All</button>
+                </div>
+
+
+            </div>
+
+
+
         </section>
 
 
@@ -117,7 +209,46 @@
 
 
     </main>
-    <footer></footer>
+    <footer class="footer">
+
+        <div class="fff">
+            <div class="footer0">
+                <div class="footer1">
+                    <img src="img/df.png" alt="">
+                    <h1>Kids <br>
+                        Education</h1>
+                </div>
+                <p class="fp">Pizza ipsum dolor meat lovers buffalo. <br> Deep dolor roll melted bacon Bianca pan <br>
+                    bacon pineapple Aussie. Mayo rib sauce <br>Hawaiian meatball.</p>
+
+            </div>
+
+            <!-- 2 -->
+            <div class="footer2">
+
+                <h1>About School</h1>
+                <p>Home</p>
+                <p>About</p>
+                <p>Facilities</p>
+                <p>Admission</p>
+
+            </div>
+            <!-- 3 -->
+            <div class="footer3">
+
+
+                <h1>Keep In Touch</h1>
+                <div>
+                    <img src="img/fb.png" alt="">
+                    <img src="img/dribble.png" alt="">
+                    <img src="img/twitter.png" alt="">
+                    <img src="img/google+.png" alt="">
+                </div>
+            </div>
+        </div>
+
+
+    </footer>
 </body>
 
 </html>
